_sass/_page.scss
/* ==========================================================================
   SINGLE PAGE/POST
   ========================================================================== */

#main {
  @include container;
  @include clearfix;
  margin-top: 0;
  padding-left: 1em;
  padding-right: 1em;
  animation: intro 0.3s both;
  animation-delay: 0.35s;

  @include breakpoint($x-large) {
    max-width: $large;
  }

  @include breakpoint($large) {
    display: flex;
    align-items: flex-start;
    gap: 3em;
  }
}

.page {
  margin-top: 0;
  @include breakpoint($large) {
    @include span(9 of 12);
    @include prefix(0 of 12);
    @include suffix(0 of 12);
    @include nobreak();
    float: none;
    flex: 1 1 auto;
    order: 1;
    width: auto;
    min-width: 0;
  }

  .page__inner-wrap {
    @include full();
    @include nobreak();

    .page__content,
    .page__meta,
    .page__share {
      @include full();
      @include nobreak();
    }
  }
}

.page__title {
  margin-top: 0;
  line-height: 1;

  & + .page__meta {
    margin-top: -0.5em;
  }
}

.page__lead {
  font-family: $global-font-family;
  font-size: $type-size-4;
}

.page__content {
  #about-me{ margin-top: 0; }
  h1 {
    margin-top: 2.5em;
    padding-bottom: 0.5em;
    border-bottom: 1px solid $border-color;
  }
  .anchor + h1 { margin-top: 0; border-bottom: 0; }

  p, li, dl {
    font-size: 1em;
  }

  .bio-wrap{
    display: grid;
    grid-template-columns: 1fr;
    align-items: start;
    row-gap: 1em;
    @include breakpoint($medium){
      grid-template-columns: 1fr 240px;
      column-gap: 1.35em;
      row-gap: 0;
    }
    @include breakpoint($large){
      grid-template-columns: 1fr 250px;
    }
  }

  .bio-main{
    flex: 1 1 auto;
    min-width: 0;
    .bio-title{ margin: 0 0 .5em; font-size: $type-size-3; background: transparent; border: 0; box-shadow: none; padding: 0; }
    input{ display: none; }
  }

  .bio-side{
    flex: 0 0 280px;
    width: 280px;

    .profile_box{ display: block; }
    .author__avatar img{ max-width: 210px; }
    .author__name{ display: none; }
    .author__bio{ display: none; }
    .author__urls{ display: none !important; }
    .author__urls_sm{ display: block !important; font-size: 1.25em; }

    @include breakpoint($small){
      flex: none;
      width: 100%;
      margin: 0.5em 0 1em;
    }
  }

  .bio-fixed{
    width: 100%;
    max-width: 250px;
    margin: 0 auto;
    @include breakpoint($medium){
      width: 230px;
      max-width: none;
      margin: .25rem 0 0 -14px;
    }
    @include breakpoint($large){
      width: 250px;
      margin-left: -18px;
    }
    .bio-photo{ display: flex; justify-content: flex-start; }
    .bio-photo img{ width: 100%; height: auto; border-radius: 6px; box-shadow: 0 2px 6px rgba(0,0,0,.2); }
    @include breakpoint($small){
      .bio-photo img{ max-height: 40vh; object-fit: contain; }
    }
    .bio-motto{ width: 100%; margin:.55em 0 0; font-size:$type-size-5; font-style: italic; text-align:center; }
  }

  .bio-main pre{
    background: transparent;
    border: 0;
    padding: 0;
    margin: 0;
  }

  .bio-main .highlight,
  .bio-main code{ background: transparent; border: 0; box-shadow: none; }

  .inline-links{ display:grid; grid-template-columns: repeat(3, minmax(0,1fr)); column-gap:.75em; row-gap:.4em; align-items:center; font-size:$type-size-5; margin:.4em 0 1em; max-width:100%; }
  .inline-links .il-item{ display:inline-flex; align-items:center; gap:.25em; min-width:0; }
  .inline-links .il-item-hf{ gap: 0; }
  .inline-links .il-icon-hf{
    display: inline-block;
    width: 1.28571429em;
    height: 1em;
    flex: 0 0 1.28571429em;
    margin-right: .25em;
    background-color: #4f4f4f;
    opacity: .95;
    transform: translateY(.5px);
    -webkit-mask: url("/images/huggingface.svg") center / .92em .92em no-repeat;
    mask: url("/images/huggingface.svg") center / .92em .92em no-repeat;
  }
  .inline-links a{ text-decoration:none; white-space:nowrap; overflow:hidden; text-overflow:ellipsis; }
  .inline-links i{ margin-right:.25em; }

  /* paragraph indents */
  p {
    margin: 0 0 $indent-var;

    /* sibling indentation*/
    @if $paragraph-indent == true {
      & + p {
        text-indent: $indent-var;
        margin-top: -($indent-var);
      }
    }
  }

  a {
    text-decoration: underline;

    &:hover {
      text-decoration: underline;

      img {
        box-shadow: 0 0 10px rgba(#000, 0.25);
      }
    }
  }

  dt {
    margin-top: 1em;
    font-family: $sans-serif;
    font-weight: bold;
  }

  dd {
    margin-left: 1em;
    font-family: $sans-serif;
    font-size: $type-size-6;
  }

  .small {
    font-size: $type-size-6;
  }

  /* blockquote citations */
  blockquote + .small {
    margin-top: -1.5em;
    padding-left: 1.25rem;
  }
}

.page__hero {
  position: relative;
  margin-bottom: 2em;
  @include clearfix;
  animation: intro 0.3s both;
  animation-delay: 0.25s;

  &--overlay {
    position: relative;
    margin-bottom: 2em;
    padding: 3em 0;
    @include clearfix;
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    animation: intro 0.3s both;
    animation-delay: 0.25s;

    a {
      color: #fff;
    }

    .wrapper {
      padding-left: 1em;
      padding-right: 1em;

      @include breakpoint($x-large) {
        max-width: $x-large;
      }
    }

    .page__title,
    .page__meta,
    .page__lead,
    .btn {
      color: #fff;
      text-shadow: 1px 1px 4px rgba(#000, 0.5);
    }

    .page__lead {
      max-width: $medium;
    }

    .page__title {
      font-size: $type-size-2;

      @include breakpoint($small) {
        font-size: $type-size-1;
      }
    }
  }
}

.page__hero-image {
  width: 100%;
  height: auto;
  -ms-interpolation-mode: bicubic;
}

.page__hero-caption {
  position: absolute;
  bottom: 0;
  right: 0;
  margin: 0 auto;
  padding: 2px 5px;
  color: #fff;
  font-family: $caption-font-family;
  font-size: $type-size-7;
  background: #000;
  text-align: right;
  z-index: 5;
  opacity: 0.5;
  border-radius: $border-radius 0 $border-radius 0;

  @include breakpoint($large) {
    padding: 5px 10px;
  }

  a {
    color: #fff;
    text-decoration: none;
  }
}

/*
   Social sharing
   ========================================================================== */

.page__share {
  margin-top: 2em;
  padding-top: 1em;
  border-top: 1px solid $border-color;

  @include breakpoint(max-width $small) {
    .btn span {
      border: 0;
      clip: rect(0 0 0 0);
      height: 1px;
      margin: -1px;
      overflow: hidden;
      padding: 0;
      position: absolute;
      width: 1px;
    }
  }
}

.page__share-title {
  margin-bottom: 10px;
  font-size: $type-size-6;
  text-transform: uppercase;
}


/*
   Page meta
   ========================================================================== */

.page__meta {
  margin-top: 2em;
  color: mix(#fff, $gray, 25%);
  font-family: $sans-serif;
  font-size: $type-size-6;

  p {
    margin: 0;
  }

  a {
    color: inherit;
  }
}

.page__meta-title {
  margin-bottom: 10px;
  font-size: $type-size-6;
  text-transform: uppercase;
}


/*
   Page taxonomy
   ========================================================================== */

.page__taxonomy {
  .sep {
    display: none;
  }

  strong {
    margin-right: 10px;
  }
}

.page__taxonomy-item {
  display: inline-block;
  margin-right: 5px;
  margin-bottom: 8px;
  padding: 5px 10px;
  text-decoration: none;
  border: 1px solid $light-gray;
  border-radius: $border-radius;

  &:hover {
    text-decoration: none;
    color: $link-color-hover;
  }
}


/*
   Comments
   ========================================================================== */

.page__comments {
  @include full();
}

.page__comments-title {
  margin-top: 2rem;
  margin-bottom: 10px;
  padding-top: 2rem;
  font-size: $type-size-6;
  border-top: 1px solid $border-color;
  text-transform: uppercase;
}

.page__comments-form {
  padding: 1em;
  background: $lighter-gray;
  transition: $global-transition;

  &.disabled {
    input,
    button,
    textarea,
    label {
      pointer-events: none;
      cursor: not-allowed;
      filter: alpha(opacity=65);
      box-shadow: none;
      opacity: 0.65;
    }
  }
}

.comment {
  @include clearfix();
  margin: 1em 0;

  &:not(:last-child) {
    border-bottom: 1px solid $border-color;
  }
}

.comment__avatar-wrapper {
  float: left;
  width: 60px;
  height: 60px;

  @include breakpoint($large) {
    width: 100px;
    height: 100px;
  }
}

.comment__avatar {
  width: 40px;
  height: 40px;
  border-radius: 50%;

  @include breakpoint($large) {
    width: 80px;
    height: 80px;
    padding: 5px;
    border: 1px solid $border-color;
  }
}

.comment__content-wrapper {
  float: right;
  width: calc(100% - 60px);

  @include breakpoint($large) {
    width: calc(100% - 100px);
  }
}

.comment__author {
  margin: 0;

  a {
    text-decoration: none;
  }
}

.comment__date {
  @extend .page__meta;
  margin: 0;

  a {
    text-decoration: none;
  }
}


/*
   Related
   ========================================================================== */

.page__related {
  margin-top: 2em;
  padding-top: 1em;
  border-top: 1px solid $border-color;
  @include clearfix();
  float: left;

  @include breakpoint($large) {
    @include pre(2.5 of 12);
  }

  a {
    color: inherit;
    text-decoration: none;
  }
}

.page__related-title {
  margin-bottom: 10px;
  font-size: $type-size-6;
  text-transform: uppercase;
}
  .contact-line{ margin: 1.2em 0; }

